objects/vlocity_cmt__OrchestrationQueue__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__BatchSize__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Batch Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ClientID__c</fullName>
        <label>Client ID</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ClientSecret__c</fullName>
        <label>Client Secret</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LoginURL__c</fullName>
        <label>Login URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrchestrationJobId__c</fullName>
        <label>Orchestration Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrchestrationSchedulerImplementationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orchestration Scheduler Implementation</label>
        <referenceTo>vlocity_cmt__OrchestrationSchedulerImplementation__c</referenceTo>
        <relationshipLabel>Orchestration Queues</relationshipLabel>
        <relationshipName>OrchestrationQueues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SiteURL__c</fullName>
        <label>Site URL</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stopped</fullName>
                    <default>true</default>
                    <label>Stopped</label>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Username__c</fullName>
        <label>Username</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <label>Orchestration Queue</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Orchestration Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestration Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>